--- a/crypton/crypton-tool/pom.xml
+++ b/crypton/crypton-tool/pom.xml
@@ -55,4 +55,17 @@
 			</plugin>
 		</plugins>
 	</build>
+	<dependencies>
+		<dependency>
+			<groupId>org.simonworks.projects</groupId>
+			<artifactId>crypt-engine</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+		</dependency>
+	</dependencies>
 </project>
