--- a/encrypton/encrypt-algorithms/pom.xml
+++ b/encrypton/encrypt-algorithms/pom.xml
@@ -4,24 +4,26 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.simonworks.projects</groupId>
-		<artifactId>crypton</artifactId>
+		<artifactId>encrypton</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>crypting-example</artifactId>
+	<artifactId>encrypt-algorithms</artifactId>
+	<name>crypt-algorithms</name>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.simonworks.projects</groupId>
-			<artifactId>crypt-engine</artifactId>
+			<artifactId>cache-works</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.simonworks.projects</groupId>
-			<artifactId>commons-sequences</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.simonworks.projects</groupId>
-			<artifactId>crypton-tool</artifactId>
+			<artifactId>smart-sequences-api</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
