--- a/encrypton/encrypt-engine/pom.xml
+++ b/encrypton/encrypt-engine/pom.xml
@@ -4,27 +4,28 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.simonworks.projects</groupId>
-		<artifactId>crypton</artifactId>
+		<artifactId>encrypton</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>crypt-algorithms</artifactId>
-	<name>crypt-algorithms</name>
-
+	<artifactId>encrypt-engine</artifactId>
+	<name>crypt-engine</name>
 	<dependencies>
 		<dependency>
 			<groupId>org.simonworks.projects</groupId>
-			<artifactId>cacheworks</artifactId>
+			<artifactId>cache-works</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-		</dependency>
+
 		<dependency>
 			<groupId>org.simonworks.projects</groupId>
 			<artifactId>smart-sequences-api</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
 		</dependency>
 	</dependencies>
 </project>
