--- a/encrypton/encrypt-tool/pom.xml
+++ b/encrypton/encrypt-tool/pom.xml
@@ -4,10 +4,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.simonworks.projects</groupId>
-		<artifactId>crypton</artifactId>
+		<artifactId>encrypton</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>crypton-tool</artifactId>
+	<artifactId>encrypt-tool</artifactId>
 	<name>crypton-tool</name>
 
 	<build>
@@ -15,6 +15,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>appassembler-maven-plugin</artifactId>
+				<version>1.10</version>
 				<configuration>
 					<extraJvmArguments>-Xmx1024m -Xms512m -XX:PermSize=256m</extraJvmArguments>
 					<binFileExtensions>
@@ -58,7 +59,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.simonworks.projects</groupId>
-			<artifactId>crypt-engine</artifactId>
+			<artifactId>encrypt-engine</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
