--- a/encrypton/encrypt-algorithms/pom.xml
+++ b/encrypton/encrypt-algorithms/pom.xml
@@ -8,13 +8,13 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>encrypt-algorithms</artifactId>
-	<name>crypt-algorithms</name>
+	<name>encrypt-algorithms</name>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.simonworks.projects</groupId>
 			<artifactId>cache-works</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${project.parent.version}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
 		<dependency>
@@ -23,8 +23,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.simonworks.projects</groupId>
-			<artifactId>smart-sequences-api</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<artifactId>smart-sequences</artifactId>
+			<version>${project.parent.version}</version>
 		</dependency>
 	</dependencies>
 </project>
