--- a/encrypton/common-algorithms/pom.xml
+++ b/encrypton/common-algorithms/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.simonworks.projects</groupId>
     <artifactId>encrypton</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+      <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>common-algorithms</artifactId>
   <name>common-algorithms</name>
@@ -11,7 +11,7 @@
   	<dependency>
   		<groupId>org.simonworks.projects</groupId>
   		<artifactId>encrypt-algorithms</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
+  		<version>${project.parent.version}</version>
   	</dependency>
   </dependencies>
 </project>
