--- a/encrypton/common-caches/pom.xml
+++ b/encrypton/common-caches/pom.xml
@@ -13,7 +13,7 @@
 		<dependency>
 			<groupId>org.simonworks.projects</groupId>
 			<artifactId>cache-works</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${project.parent.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
