--- a/encrypton/pom.xml
+++ b/encrypton/pom.xml
@@ -4,10 +4,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.simonworks.projects</groupId>
 	<artifactId>encrypton</artifactId>
-	<version>${crypton.project.version}</version>
+	<version>${encrypton.project.version}</version>
 	<packaging>pom</packaging>
-	<name>crypton</name>
-	<description>A framework for a smart crypting ;-)</description>
+	<name>encrypton</name>
+	<description>A framework for a smart encrypting ;-)</description>
 
 	<build>
 		<pluginManagement>
@@ -15,7 +15,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-source-plugin</artifactId>
-					<version>3.0.1</version>
+					<version>3.3.0</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -24,7 +24,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
+				<version>3.12.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -33,7 +33,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.7</version>
+				<version>3.3.1</version>
 			</plugin>
 		</plugins>
 	</build>
@@ -42,10 +42,10 @@
 		<commons.lang3.version>3.8.1</commons.lang3.version>
 		<commons.cli.version>1.4</commons.cli.version>
 		<slf4j.api.version>1.7.26</slf4j.api.version>
-		<logback.version>1.2.3</logback.version>
+		<logback.version>[1.2.13,)</logback.version>
 		<mongo.java.driver.version>3.9.1</mongo.java.driver.version>
 
-		<crypton.project.version>0.0.1-SNAPSHOT</crypton.project.version>
+		<encrypton.project.version>0.0.1-SNAPSHOT</encrypton.project.version>
 	</properties>
 
 	<dependencyManagement>
@@ -76,7 +76,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>[4.13.1,)</version>
 			<scope>test</scope>
 		</dependency>
 
